--- a/jobs/templates/job.html
+++ b/jobs/templates/job.html
@@ -1,3 +1,5 @@
 {% extends "layout.html" %}
 
-{% block content %} {{show_job(job)}} {% endblock %}
+{% block content %}
+  {{show_job(job)}}
+{% endblock %}
