--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -9,12 +9,9 @@
   <div class="card-content">
     <div class="content">
       <p>
-        <a href="{{ url_for('employer', employer_id=job['employer_id']) }}">{{ job['employer_name'] }} 
-        <br>
-        ${{ job['salary'] }}
-        <br>
+        <a href="{{ url_for('employer', employer_id=job['employer_id']) }}">{{ job['employer_name'] }}</a><br>
+        ${{ job['salary'] }}<br>
         {{ job['description'] }}
-      </a>
       </p>
     </div>
   </div>
